--- a/src/Components/ProjectContainer.css
+++ b/src/Components/ProjectContainer.css
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   row-gap: 3em;
-  width: 100vw;
+  width: 100%;
+  margin: 20px;
   padding: 20px;
 }
