--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@ html {
   /* background-color: #efeeee; */
 }
 
-.background-container {
+/* .background-container {
   width: 100%;
   height: 100%;
   overflow: scroll;
@@ -71,4 +71,4 @@ html {
   100% {
     background-position: 500px 1000px, 400px 800px, 0px 300px;
   }
-}
+} */
